# Orion

./: .gitignore  CMakeLists.txt  README.md
include/Orion/: Reader.hpp  Tokenizer.hpp
src/: Main.cpp
tests/: TokenizerTests.cpp
